Fixed app canvas edge cut off bug.

--- a/app/scss/partials/_layout.scss
+++ b/app/scss/partials/_layout.scss
@@ -42,6 +42,7 @@ section, footer {
 }
 
 .app-wrapper {
+  flex-shrink: 0;
   width: 400px;
   height: 400px;
   margin: 16px 0px;
@@ -111,7 +112,7 @@ section, footer {
 
 .carousel-pages {
   display: inline-block;
-  max-width: 1100px;
+  max-width: 1120px;
   padding: 0 10px;
   margin: auto;
 }
